--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@astrojs/partytown": "^1.2.3",
     "@astrojs/react": "^2.2.1",
     "@astrojs/sitemap": "^1.3.3",
+    "@astrojs/vercel": "^3.5.0",
     "@nanostores/react": "^0.7.1",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "astro": "^2.5.6",
+    "astro": "^2.6.4",
     "astro-google-fonts-optimizer": "^0.2.2",
     "astro-seo": "^0.7.2",
     "firebase": "^9.22.1",
