--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^2.3.0",
     "@astrojs/partytown": "^1.2.3",
     "@astrojs/react": "^2.2.1",
     "@astrojs/sitemap": "^1.3.3",
